--- a/modulo1/semana2/style.css
+++ b/modulo1/semana2/style.css
@@ -4,6 +4,191 @@
     padding: 0;
 }
 
-img{
-    width: 20px;
+body{
+    font-family: Verdana;
+    background-color: #000000;
 }
+
+
+header{
+    padding: 10px;
+    width: 100%;   
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    box-shadow: inset 0 0 10em black;  
+    background-color: #01a5b1;
+    position: fixed;  
+}
+
+.logo{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: #fff; 
+    font-size: 10px;   
+}
+
+.logo img{    
+    width: 40px;
+    height: 40px;
+}
+
+.navbar-items ul{        
+    display: flex; 
+    flex-direction: row;   
+}
+
+li{
+    list-style-type: none;
+}
+
+.navbar-items li{
+    padding: 10px;
+    
+}
+
+.navbar-items a{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 15px;    
+    color: #fff;
+    text-transform: 300ms ease;    
+}
+
+.navbar-items a:hover{    
+    opacity: 0.5;    
+}
+
+main{
+    padding: 80px 0 0 0;
+}
+
+section{
+    padding-top: 10px;
+    display: flex;
+    justify-content: center;
+    background-color: #000000;
+}
+.evento-destaque{
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+    background-color: #f4f3ee;
+    width: 99%;
+    border-radius: 0 20px 20px 0;
+}
+
+h2{
+    margin: 10px 0 0 15px;
+    font-size: 20px;
+    color: #fff;
+}
+
+.evento-destaque img{    
+    height: 400px;
+    
+}
+
+.destaque-items{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    gap: 30px;
+}
+
+.destaque-items ul{
+    padding: 0 20px 0 20px;
+    display: flex; 
+    flex-direction: column;    
+}
+
+li.data{
+    color: red;
+    font-weight: bold;
+}
+
+.espaco-items h3{
+   padding: 30px 20px 30px 20px;
+}
+
+.espaco-items p{
+    padding: 0 20px 0 20px;
+ }
+
+.evento-destaque .destaque-items img{
+    width: 200px;  
+    padding: 0 0 40px 0;  
+}
+
+.saiba-mais:hover{
+    opacity: 0.8;  
+}
+
+.eventos-todos  {  
+    width: 98%; 
+    display: flex;
+    justify-content: space-between;
+}
+
+.eventos-items .address{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 5px;
+}
+
+.eventos{
+    width: 350px;
+    background-color: #f4f3ee;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.eventos img{
+    width: 350px;
+    border-radius: 20px 20px 0 0;
+}
+
+.eventos a{
+    margin-bottom: 10px;
+}
+
+.eventos a img{
+    width: 250px;
+    height: 50px;
+    border-radius: 5px;
+}
+
+.eventos-items{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    gap: 30px;
+}
+
+.eventos-items ul li{
+    padding: 10px 0 10px 0;
+    display: flex; 
+    flex-direction: column;    
+}
+
+.conteudo{
+    min-height: 100vh;
+}
+
+footer{
+    background-color: #333;
+    color: #fff;
+    font-size: 15px;
+    text-align: center;
+}
+
