--- a/modulo1/semana2/style.css
+++ b/modulo1/semana2/style.css
@@ -64,11 +64,16 @@ main{
     padding: 80px 0 0 0;
 }
 
-section{
-    padding-top: 10px;
+.destaque{    
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     background-color: #000000;
+}
+.destaque h2{
+    margin: 20px;
+}
+.todos h2{
+    margin: 20px;
 }
 .evento-destaque{
     display: flex;
@@ -77,7 +82,8 @@ section{
     margin: 0;
     background-color: #f4f3ee;
     width: 99%;
-    border-radius: 0 20px 20px 0;
+    height: 400px;
+    border-radius: 20px;    
 }
 
 h2{
@@ -86,9 +92,10 @@ h2{
     color: #fff;
 }
 
-.evento-destaque img{    
+.evento-destaque img{ 
+    width: 900px;   
     height: 400px;
-    
+    border-radius: 20px 0 0 20px;    
 }
 
 .destaque-items{
@@ -97,13 +104,21 @@ h2{
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    gap: 30px;
+    gap: 30px;    
 }
 
 .destaque-items ul{
     padding: 0 20px 0 20px;
     display: flex; 
     flex-direction: column;    
+}
+
+.destaque-items .address{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-left: 20px;
+    gap: 5px;
 }
 
 li.data{
@@ -119,8 +134,14 @@ li.data{
     padding: 0 20px 0 20px;
  }
 
+ .destaque-items .espaco-items h3{
+    font-size: 30px;
+    text-transform: uppercase;
+ }
+
 .evento-destaque .destaque-items img{
-    width: 200px;  
+    width: 300px;  
+    height: 130px;
     padding: 0 0 40px 0;  
 }
 
