--- a/modulo1/semana2/style.css
+++ b/modulo1/semana2/style.css
@@ -64,7 +64,7 @@ main{
     padding: 80px 0 0 0;
 }
 
-.destaque{    
+.destaque{       
     display: flex;
     flex-direction: column;
     background-color: #000000;
@@ -153,6 +153,7 @@ li.data{
     width: 98%; 
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .eventos-items .address{
@@ -213,3 +214,111 @@ footer{
     text-align: center;
 }
 
+@media (max-width: 820px){
+    header{        
+        width: 100%;       
+        flex-direction: column;
+        justify-content:center;        
+    }
+
+    .navbar-items ul{        
+        flex-direction: row;        
+    }
+
+    .destaque{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .destaque h2{
+        margin: 0;
+        margin-top: 10%;       
+    }
+
+    .evento-destaque{        
+        margin-top: 5%;       
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;  
+        height: 80%;  
+        border-radius: 0;    
+    }
+
+    .evento-destaque img{        
+        width: 100%;
+        border-radius: 0;
+    }
+
+    .evento-destaque .destaque-items img{
+        width: 200px;  
+        height: 50px;        
+        padding: 0;        
+    }
+
+    .evento-destaque .espaco-items ul{
+        align-items: center;
+        gap: 10px;
+    }
+
+    .evento-destaque .espaco-items h3{
+        font-size: 20px;        
+        padding: 0;
+    }
+
+    .eventos-todos{  
+        margin-top: 20px;      
+        justify-content: center;
+        align-items: center;       
+        width: 100%;        
+       
+    }
+    
+    .turismo{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .turismo h2{
+        margin-top: 5%;
+    }
+
+    .cursos{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .cursos h2{
+        margin-top: 5%;
+    }
+
+    .eventos-todos{
+        flex-direction: column;
+    }
+
+    .eventos{
+        margin-top: 20px;
+        margin-bottom: 20px;
+    } 
+    
+    figure{
+        width: 100%;
+    }
+
+    footer{
+        white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+    }
+
+    
+    
+   
+    
+}
