--- a/modulo1/semana2/style.css
+++ b/modulo1/semana2/style.css
@@ -112,7 +112,8 @@ h2{
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    gap: 30px;    
+    gap: 30px;  
+    margin-bottom: 50px;  
 }
 
 .destaque-items ul{
@@ -147,14 +148,18 @@ li.data{
     text-transform: uppercase;
  }
 
-.evento-destaque .destaque-items img{
-    width: 230px;  
-    height: 120px;
-    padding: 0 0 40px 0;  
+.evento-destaque .destaque-items a{    
+    font-size: 20px;
+    border: 1px solid;
+    color: #000;   
+    text-decoration: none;
+    padding: 15px 30px 15px 30px;  
+    border-radius: 5px;
 }
 
-.saiba-mais:hover{
-    opacity: 0.8;  
+.evento-destaque .destaque-items a:hover{  
+    cursor: pointer;  
+    background-color: #cacbc67f;
 }
 
 .eventos-todos  {  
@@ -222,8 +227,8 @@ li.data{
 }
 
 #section-contato{
-    margin: 30px 0 20px 0;
-    padding: 30px 0 0 0;
+    margin: 50px 0 0 0;
+    padding: 40px;
     width: 100%;
     background-color: #eee;
     color: #000000;
@@ -245,7 +250,11 @@ fieldset{
     font-size: 25px;
     margin-bottom: 10px;
 }
-.contato{    
+
+.contato{ 
+    display: flex;
+    justify-content: start; 
+    align-items: start;  
     width: 30%;
 }
 
@@ -254,6 +263,18 @@ fieldset{
     font-size: 30px;
 }
 
+button{
+    margin-top: 10px;
+    width: 150px;
+    padding: 10px;
+    font-size: 1em;
+    text-transform: 300ms ease;
+}
+
+button:hover{
+    cursor: pointer;
+    background-color: #cacbc67f;
+}
 div input{
     width: 100%;
     height: 30px;
@@ -279,7 +300,10 @@ textarea{
     height: 40px;
 }
 
-.footer-1{
+#sobre{
+    margin: 50px 0 0 0; 
+}
+.somos{
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -290,7 +314,7 @@ textarea{
     color: #000000;    
     text-align: center;    
 }
-.footer-2{
+.fazemos{
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -301,7 +325,7 @@ textarea{
     color: #000000;    
     text-align: center;    
 }
-.footer-3{ 
+.missao{ 
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -312,21 +336,22 @@ textarea{
     color: #000000;    
     text-align: center;    
 }
-.footer-4{  
+.footer{  
+    margin: 50px 0 0 0;
     display: flex;
     justify-content: center;
     flex-direction: column;
     gap: 10px;
     width: 100%;    
     padding: 10px 0 10px 0;
-    background-color: #faedcd;
-    color: #000000;    
+    background-color: #393d3f;
+    color: #fff;    
     text-align: center;    
 }
 
 .redes{
     display: flex;
-    justify-content: center;
+    justify-content: start;
     gap: 30px;
 }
 
@@ -334,107 +359,12 @@ textarea{
 
 /*mobile*/
 
-@media (max-width: 820px){
-    header{        
-        width: 100%;       
-        flex-direction: column;
-        justify-content:center;        
-    }
-
-    .navbar-items ul{        
-        flex-direction: row;        
-    }
-
-    .destaque{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .destaque h2{
-        margin: 0;
-        margin-top: 10%;       
-    }
-
-    .evento-destaque{        
-        margin-top: 5%;       
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;  
-        height: 80%;  
-        border-radius: 0;    
-    }
-
-    .evento-destaque img{        
+@media (max-width: 800px){
+    
+    .footer{
         width: 100%;
-        border-radius: 0;
-    }
-
-    .evento-destaque .destaque-items img{
-        width: 200px;  
-        height: 50px;        
-        padding: 0;        
-    }
-
-    .evento-destaque .espaco-items ul{
-        align-items: center;
-        gap: 10px;
-    }
-
-    .evento-destaque .espaco-items h3{
-        font-size: 20px;        
-        padding: 0;
-    }
-
-    .eventos-todos{  
-        margin-top: 20px;      
-        justify-content: center;
-        align-items: center;       
-        width: 100%;        
-       
-    }
-    
-    .turismo{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .turismo h2{
-        margin-top: 5%;
-    }
-
-    .cursos{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .cursos h2{
-        margin-top: 5%;
-    }
-
-    .eventos-todos{
-        flex-direction: column;
-    }
-
-    .eventos{
-        margin-top: 20px;
-        margin-bottom: 20px;
-    } 
-    
-    figure{
-        width: 100%;
-    }
-
-    
-    footer{
-        white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+        margin: 10px 0 0 0;
+        padding: 10px;
+        font-size: 10px;      
     }   
 }
